<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="app1">Movie </string>
    <string name="title">My Nanodegree Apps</string>
    <string name="project1">Popular Movies, Stage 1</string>
    <string name="project2">Popular Movies, Stage 2</string>
    <string name="project3">Super Duo!</string>
    <string name="project4">Build It Bigger</string>
    <string name="project5">Make Your App Material</string>
    <string name="project6">Go Ubiquitous</string>
    <string name="project7">Capstone, Stage 1</string>
    <string name="project8">Capstone, Stage 2</string>

</resources>
